--- a/iosApp/Configuration/Config.xcconfig
+++ b/iosApp/Configuration/Config.xcconfig
@@ -1,7 +1,7 @@
 TEAM_ID=
 
 PRODUCT_NAME=MyApplication
-PRODUCT_BUNDLE_IDENTIFIER=de.neofonie.myapplication.MyApplication$(TEAM_ID)
+PRODUCT_BUNDLE_IDENTIFIER=com.sjaindl.app.MyApplication$(TEAM_ID)
 
 CURRENT_PROJECT_VERSION=1
 MARKETING_VERSION=1.0
