--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -30,6 +30,7 @@ androidx-espresso-core = "3.7.0"
 vanniktech_maven_publish = "0.35.0"
 navigationCompose = "2.9.6"
 napierVersion = "2.7.1"
+sqldelight = "2.2.1"
 
 [libraries]
 android_appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
@@ -81,7 +82,11 @@ test_junit = { group = "junit", name = "junit", version.ref = "junit" }
 turbine = { module = "app.cash.turbine:turbine", version.ref = "turbine" }
 androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationCompose" }
 logging-napier = { module = "io.github.aakira:napier", version.ref = "napierVersion" }
+sqldelight-runtime = { module = "app.cash.sqldelight:runtime", version.ref = "sqldelight" }
+sqldelight-android-driver = { module = "app.cash.sqldelight:android-driver", version.ref = "sqldelight" }
+sqldelight-sqlite-driver = { module = "app.cash.sqldelight:sqlite-driver", version.ref = "sqldelight" }
 sqldelight-native-driver = { module = "app.cash.sqldelight:native-driver", version.ref = "sqldelight" }
+sqldelight-coroutines-extensions = { module = "app.cash.sqldelight:coroutines-extensions", version.ref = "sqldelight" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "gradle" }
@@ -95,3 +100,4 @@ kover = { id = "org.jetbrains.kotlinx.kover", version.ref = "kover" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 mokkery = { id = "dev.mokkery", version.ref = "mokkery" }
 vanniktech_maven_publish = { id = "com.vanniktech.maven.publish", version.ref = "vanniktech_maven_publish" }
+sqldelight = { id = "app.cash.sqldelight", version.ref = "sqldelight" }
