--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -31,6 +31,7 @@ vanniktech_maven_publish = "0.35.0"
 navigationCompose = "2.9.6"
 napierVersion = "2.7.1"
 sqldelight = "2.2.1"
+buildkonfig = "6.0.7"
 
 [libraries]
 android_appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
@@ -58,7 +59,7 @@ koin_bom = { group = "io.insert-koin", name = "koin-bom", version.ref = "koin" }
 koin_compose_androidx = { group = "io.insert-koin", name = "koin-androidx-compose" }
 koin_compose_viewmodel = { group = "io.insert-koin", name = "koin-compose-viewmodel" }
 koin_core = { group = "io.insert-koin", name = "koin-core" }
-koin-compose = { module = "io.insert-koin:koin-compose", version.ref = "koinCompose"}
+koin-compose = { module = "io.insert-koin:koin-compose", version.ref = "koinCompose" }
 koin_ksp = { group = "io.insert-koin", name = "koin-ksp-compiler", version.ref = "koinAnnotations" }
 koin_test = { group = "io.insert-koin", name = "koin-test" }
 koin_testJunit4 = { group = "io.insert-koin", name = "koin-test-junit4" }
@@ -101,3 +102,4 @@ ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 mokkery = { id = "dev.mokkery", version.ref = "mokkery" }
 vanniktech_maven_publish = { id = "com.vanniktech.maven.publish", version.ref = "vanniktech_maven_publish" }
 sqldelight = { id = "app.cash.sqldelight", version.ref = "sqldelight" }
+buildkonfig = { id = "com.github.gmazzo.buildconfig", version.ref = "buildkonfig" }
